--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -3,10 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="46,37,0,0" VerticalAlignment="Top" Width="61"/>
-        <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
-        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="48,113,0,0" VerticalAlignment="Top" Width="69" RenderTransformOrigin="0.371,0.498"/>
-        <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
+        <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="25,40,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="35,75,0,0" VerticalAlignment="Top" Width="61"/>
+        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="26,115,0,0" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.371,0.498"/>
+        <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="14,165,0,0" VerticalAlignment="Top" Width="136"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Height="60" Margin="20,210,0,0" VerticalAlignment="Top" Width="205"/>
+        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="240,230,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
