--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -7,8 +7,10 @@
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="35,75,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="26,115,0,0" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.371,0.498"/>
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="14,165,0,0" VerticalAlignment="Top" Width="136"/>
-        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Height="60" Margin="20,210,0,0" VerticalAlignment="Top" Width="205"/>
-        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="240,230,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Height="60" Margin="15,195,0,0" VerticalAlignment="Top" Width="205"/>
+        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="235,212,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Total Charge after adding &#xA;the wrap charge ($25)" HorizontalAlignment="Left" Height="60" Margin="15,250,0,0" VerticalAlignment="Top" Width="205"/>
+        <TextBlock Name="totalWrapTextBlock" HorizontalAlignment="Left" Height="23" Margin="235,262,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
