--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -1,20 +1,22 @@
 ﻿<Window x:Class="ProductApps.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="400" Width="525">
     <Grid>
-        <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="25,40,0,0" VerticalAlignment="Top" Width="80"/>
-        <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="35,75,0,0" VerticalAlignment="Top" Width="61"/>
-        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="26,115,0,0" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.371,0.498"/>
-        <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="14,165,0,0" VerticalAlignment="Top" Width="136"/>
-        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Height="60" Margin="15,195,0,0" VerticalAlignment="Top" Width="205"/>
-        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="235,212,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <Label Content="Total Charge after adding &#xA;the wrap charge ($25)" HorizontalAlignment="Left" Height="60" Margin="15,250,0,0" VerticalAlignment="Top" Width="205"/>
+        <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="20,10,0,0" VerticalAlignment="Top" Width="80"/>
+        <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="29,55,0,0" VerticalAlignment="Top" Width="61"/>
+        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="21,100,0,0" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.371,0.498"/>
+        <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="10,140,0,0" VerticalAlignment="Top" Width="136"/>
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Height="60" Margin="10,175,0,0" VerticalAlignment="Top" Width="205"/>
+        <TextBlock Name="totalChargeTextBlock" HorizontalAlignment="Left" Height="23" Margin="235,182,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Total Charge after adding &#xA;the wrap charge ($25)" HorizontalAlignment="Left" Height="60" Margin="15,240,0,0" VerticalAlignment="Top" Width="205"/>
         <TextBlock Name="totalWrapTextBlock" HorizontalAlignment="Left" Height="23" Margin="235,262,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
-        <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
-        <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
+        <Label Content="Total Charge After GST (@10%" HorizontalAlignment="Left" Height="40" Margin="15,315,0,0" VerticalAlignment="Top" Width="205"/>
+        <TextBlock Name="totalGstTextBlock" HorizontalAlignment="Left" Height="23" Margin="240,317,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="180,147,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
+        <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="124,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
+        <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="133,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
+        <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="135,105,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
